# Rust4Diva

./: .gitignore  Cargo.toml  build.rs  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: debug.yml  main.yml  release.yml
assets/: diva.xcf  logo.aseprite
aur/: PKGBUILD  Rust4Diva.desktop
flatpak/: build-flatpak.sh  gensources-flatpak.sh  index.html  rust4diva-sources.json  xyz.rust4diva.Rust4Diva.desktop  xyz.rust4diva.Rust4Diva.json  xyz.rust4diva.Rust4Diva.metainfo.xml  xyz.rust4diva.www.Rust4Diva.desktop  xyz.rust4diva.www.Rust4Diva.json  xyz.rust4diva.www.Rust4Diva.metainfo.xml
src/: app.rs  config.rs  diva.rs  divamodarchive.rs  downloads.rs  firstlaunch.rs  gamebanana.rs  gamebanana_async.rs  language.rs  main.rs  modmanagement.rs  modpacks.rs  oldmain.rs  oneclick.rs  util.rs
src/lang/: enLEET.lang  enUS.lang  esPR.lang  jaJP.lang  zh-cn.lang
ui/: applogic.slint  appwindow.slint  common-table.slint  components.slint  cosmic-styling.slint  diva-types.slint  errordialog.slint  filetable.slint  mod-table.slint  state-layer-base.slint  state-layer.slint  styling.slint
ui/components/: label.slint  popup.slint  state-layer-base.slint  state-layer.slint
ui/delegates/: ItemDelegate.slint  ItemDelegateBase.slint
ui/dialogs/: confirmdelete.slint  deletepack.slint  errordialog.slint  errormsg.slint
ui/structs/: TextStyle.slint
ui/styling/: cosmic-styling.slint
ui/subwindows/: editmod.slint  gb-item.slint  mod-files.slint  settings.slint  setup.slint
ui/tabs/: gamebanana.slint  modmanager.slint  modpacks.slint
ui/widgets/: buttons.slint  common-table.slint  context-menu-item.slint  context-menu.slint  delete-pack-dialog.slint  errordialog.slint  filetable.slint  gb-search-card.slint  info-dialog.slint  mod-table.slint  modctxmenu.slint  modpack-tables.slint  search-preview-card.slint  search-table.slint  text-box.slint  text-entry-dialog.slint
windows/: install.nsi  nightly.nsi  package-nightly.bat  package-release.bat  release.nsi  vcpkg.json
